--- a/_posts/2020-05-12-tests.md
+++ b/_posts/2020-05-12-tests.md
@@ -1,6 +1,6 @@
 ---
-title: "Generative vs. Discriminative Models"
-date: 2020-05-12
+title: "Deep Learning Notes"
+date: 2021-02-14
 layout: default
 tags: [machine learning]
 header:
@@ -10,17 +10,4 @@ toc: true
 toc_label: "Content"
 ---
 
-* For a generative-discriminative pair (NB and LR)
-  * The discriminative model has a lower asymptote error
-  * The generative model need less training data, more robust to the noise
-* Discriminative
-  * Model $ P(y \vert x) $
-  * Logistic Regression: $ P(y=1 \vert x) = \frac{1}{1+e^{-z}} $
-  * Directly learn the (hard or soft) boundary 
-  * E.g. Conditional Random Fields (CRF)
-* Generative
-  * Model $ P(x, y) = P(x \vert y)P(y) $
-  * Usually harder to model $ P(x \vert y) \Rightarrow $ Naive Bayes assumes conditional independence of $ x_i $
-  * Learn the distribution of the data, or how the data is generated from each class, then determine the most likely class
-  * E.g. Naive Bayes, Bayesian Network, Markov Random Field, Hidden Markov Models (HMM), Gaussian Mixture Model
- 
+[Notion Note](https://www.notion.so/f70b4889373c493382ecbb10e6c8d6b5?v=6a56c78caa074a79a2752410464fa2cd)
