--- a/_posts/2020-05-12-tests.md
+++ b/_posts/2020-05-12-tests.md
@@ -11,4 +11,6 @@ toc_label: "Content"
 ---
 
 <a href="https://www.notion.so/f70b4889373c493382ecbb10e6c8d6b5?v=6a56c78caa074a79a2752410464fa2cd" target="_blank">Notion Note</a>
+[link text](https://www.notion.so/f70b4889373c493382ecbb10e6c8d6b5?v=6a56c78caa074a79a2752410464fa2cd){:target="_blank"}
 &nbsp;
+
