--- a/_posts/2020-05-12-tests.md
+++ b/_posts/2020-05-12-tests.md
@@ -10,7 +10,7 @@ toc: true
 toc_label: "Content"
 ---
 
-<a href="https://www.notion.so/f70b4889373c493382ecbb10e6c8d6b5?v=6a56c78caa074a79a2752410464fa2cd" target="_blank">Notion Note</a>
+<a href="https://www.notion.so/f70b4889373c493382ecbb10e6c8d6b5?v=6a56c78caa074a79a2752410464fa2cd" target="_blank" rel="noreferrer noopener">Notion Note</a>
 
 [link text](https://www.notion.so/f70b4889373c493382ecbb10e6c8d6b5?v=6a56c78caa074a79a2752410464fa2cd){:target="_blank"}
 
