--- a/_posts/2020-05-12-tests.md
+++ b/_posts/2020-05-12-tests.md
@@ -8,7 +8,7 @@ header:
 excerpt: "My Notes on Deep Learning Concepts"
 toc: true
 toc_label: "Content"
-url: "https://www.notion.so/f70b4889373c493382ecbb10e6c8d6b5?v=6a56c78caa074a79a2752410464fa2cd"
+note_link: "https://www.notion.so/f70b4889373c493382ecbb10e6c8d6b5?v=6a56c78caa074a79a2752410464fa2cd"
 ---
 
 
