change note links to Notion

--- a/_posts/2020-04-17-nlpsteps.md
+++ b/_posts/2020-04-17-nlpsteps.md
@@ -1,13 +1,14 @@
 ---
-title: "Paper Notes"
-date: 2020-05-20
+title: "Machine Learning Notes"
+date: 2021-02-14
 layout: default
 tags: [machine learning]
 header:
   image: "/images/nlp.jpg"
-excerpt: "Short notes for papers I recently read."
+excerpt: "Notion Notes of Machine Learning Concepts"
 toc: true
 toc_label: "Content"
+note_link: https://www.notion.so/2dcd18cc1593441a8981275a3718013e?v=cbd88709dda448ec89c22a4a14f7c0c4
 ---
 
 [Network Randomization: A Simple Technique for Generalization in Deep Reinforcement Learning](https://arxiv.org/pdf/1910.05396.pdf)
